5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1638_87.log
== TEST (2019-04-11 11:39:07) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b and a<c):
	print(a)
	(b<a and b<c)
	print(b)
else:
	(c>a and c>b)
	print(c)
	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:39:19) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b and a<c):
	print(a)
	(b<a and b<c)
	print(b)
else:
	(c>a and c>b)
	print(c)
	
	
-- EXECUTION TIME:
0.178413
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:39:26) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b and a<c):
	print(a)
	(b<a and b<c)
	print(b)
else:
	(c>a and c>b)
	print(c)
	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:42:35) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
	(b<a<c)
	print(b)
else:
	(c<a<b)
	print(c)
	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:42:46) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
	(b<a<c)
	print(b)
else:
	(c<a<b)
	print(c)
	
	
-- EXECUTION TIME:
0.222167
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:42:52) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
	(b<a<c)
	print(b)
else:
	(c<a<b)
	print(c)
	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:43:07) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
	(b<a<c)
	print(b)
else:
	(c<a<b)
	print(c)
	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:44:01) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
	(b<a<c)
	print(b)
else:
	(c<b<a)
	print(c)
	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:44:16) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
	(b<c<a)
	print(b)
else:
	(c<b<a)
	print(c)
	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:44:39) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
else:
	(c<b<a)
	print(c)
	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:44:48) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
else:
	(c<b<a)
	print(c)
	
	
-- EXECUTION TIME:
0.15008
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:44:55) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
else:
	(c<b<a)
	print(c)
	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:45:04) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
else:
	(c<b<a)
	print(c)
	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:46:34) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	(b<a<c)
	print(a)
	
	
else:
	(c<b<a)
	print(c)
	
	
-- EXECUTION TIME:
0.169799
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:46:38) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	(b<a<c)
	print(a)
	
	
else:
	(c<b<a)
	print(c)
	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:48:28) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
if (c<b<a):
	print(c)
else:
	(b<c<a)
	print(c)
	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:48:44) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
if (c<b<a):
	print(c)
else:
	(b<c<a)
	print(b)
	
	
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:48:52) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
if (c<b<a):
	print(c)
else:
	(b<c<a)
	print(b)
	
	
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:49:01) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
if (c<b<a):
	print(c)
else:
	(b<c<a)
	print(b)
	
	
-- EXECUTION TIME:
0.184816
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
788
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
456
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:49:06) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
if (c<b<a):
	print(c)
else:
	(b<c<a)
	print(b)
	
	
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:51:59) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	(a<c<b)
	print(a)
	
if (c<b<a):
	(c<a<b)
	print(c)
	
else:
	(b<c<a)
	(b<a<c)
	print(b)
	
	
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:53:07) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c and a<c<b):
	print(a)
	
if (c<b<a and c<a<b):
	print(c)
	
else:
	(b<c<a and b<a<c)
	print(b)
	
	
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:56:14) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
if (a<c<b):
	print(a)
if(b<a<c):
	print(b)
if(b<c<a):
	print(b)

else:
	(c<b<a)
	(c<a<b)
	print(c)
	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:56:21) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
if (a<c<b):
	print(a)
if(b<a<c):
	print(b)
if(b<c<a):
	print(b)

else:
	(c<b<a)
	(c<a<b)
	print(c)
	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:59:08) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b):
	(a<c)
	print(a)
	(b<a)
	(b<c)
   print(b)
else:
	(c<b)
	(c<a)
	print(c)

	
	
-- ERROR:
File "XXXX", line 10
    print(b)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:59:36) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b):
	(a<c)
	print(a)
if	(b<a):
	(b<c)
   print(b)
else:
	(c<b)
	(c<a)
	print(c)

	
	
-- ERROR:
File "XXXX", line 10
    print(b)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:00:34) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
if	(b<a<c):
   print(b)
else:
	(c<b<a)
	print(c)

	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:01:09) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
if	(b<a<c):
   print(b)
if (c<a<b):
	print(c)

	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:01:32) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c):
	print(a)
if	(b<a<c):
   print(b)
if (c<a<b and c<b<a):
	print(c)

	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:02:09) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c and a<c<b):
	print(a)
if	(b<a<c and b<c<a):
   print(b)
if (c<a<b and c<b<a):
	print(c)

	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:03:15) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c or a<c<b):
	print(a)
if	(b<a<c or b<c<a):
   print(b)
if (c<a<b or c<b<a):
	print(c)

	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:03:21) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c or a<c<b):
	print(a)
if	(b<a<c or b<c<a):
   print(b)
if (c<a<b or c<b<a):
	print(c)

	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 12:03:30) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c or a<c<b):
	print(a)
if	(b<a<c or b<c<a):
   print(b)
if (c<a<b or c<b<a):
	print(c)

	
	
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 12:03:38) 
-- CODE:
a = int(input("numero 1: "))
b = int(input("numero 2: "))
c = int(input("numero 3: "))

if (a<b<c or a<c<b):
	print(a)
if	(b<a<c or b<c<a):
   print(b)
if (c<a<b or c<b<a):
	print(c)

	
	
-- EXECUTION TIME:
0.179186
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
